# swapping-autoencoder-pytorch

./: .gitignore  README.md  pyproject.toml  streamlit_interface.py
api/: __init__.py  __main__.py  const.py  util.py
data/: base_dataset.py
models/: __init__.py  swapping_autoencoder_model.py
models/networks/: __init__.py  discriminator.py  encoder.py  generator.py  patch_discriminator.py  stylegan2_layers.py
models/networks/stylegan2_op/: fused_act.py  upfirdn2d.py
options/: __init__.py
