[tool.poetry]
name = "swapping-autoencoder-pytorch"
version = "0.1.0"
description = ""
authors = ["Your Name <as7122000@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
GPUtil = "^1.4.0"
numpy = "^1.21.2"
torch = "^1.9.0"
torchvision = "^0.10.0"
sklearn = "^0.0"
dominate = "^2.6.0"
func-timeout = "^4.3.5"
ninja = "^1.10.2"
opencv-python = "^4.5.3"
matplotlib = "^3.4.3"
PyQt5 = "^5.15.4"
streamlit = "^0.88.0"
streamlit-drawable-canvas = "^0.8.0"

[tool.poetry.dev-dependencies]
black = {version = "^21.8b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
